[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/player2.png" type="Texture" id=1]
[ext_resource path="res://sprites/player1.png" type="Texture" id=2]
[ext_resource path="res://sprites/player 5.png" type="Texture" id=3]
[ext_resource path="res://sprites/fondo2.jpg" type="Texture" id=4]
[ext_resource path="res://sprites/player3.png" type="Texture" id=5]
[ext_resource path="res://sprites/player 4.png" type="Texture" id=6]
[ext_resource path="res://effects/Selec/selec_person.gd" type="Script" id=7]

[node name="Select_person" type="Node2D"]
position = Vector2( -3.1189, 0 )
script = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 362.435, 634.154 )
scale = Vector2( 0.839252, 1.50116 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="Node2D"]
margin_left = 420.0
margin_top = 259.0
margin_right = 625.0
margin_bottom = 470.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Node2D/Button"]
position = Vector2( 99.7664, 97.6965 )
scale = Vector2( 0.421359, 0.336739 )
texture = ExtResource( 2 )

[node name="Button2" type="Button" parent="Node2D"]
margin_left = 78.9147
margin_top = 263.273
margin_right = 272.915
margin_bottom = 469.273
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="Node2D/Button2"]
position = Vector2( 101.684, 94.0673 )
scale = Vector2( 0.373, 0.340776 )
texture = ExtResource( 6 )

[node name="Button3" type="Button" parent="Node2D"]
margin_left = 79.0
margin_top = 540.0
margin_right = 276.0
margin_bottom = 747.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="Node2D/Button3"]
position = Vector2( 94.9301, 101.656 )
scale = Vector2( 0.399308, 0.319396 )
texture = ExtResource( 3 )

[node name="Button4" type="Button" parent="Node2D"]
margin_left = 433.0
margin_top = 554.0
margin_right = 630.0
margin_bottom = 752.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite5" type="Sprite" parent="Node2D/Button4"]
position = Vector2( 99.6935, 107.194 )
scale = Vector2( 0.390538, 0.330031 )
texture = ExtResource( 1 )

[node name="Button5" type="Button" parent="Node2D"]
margin_left = 246.0
margin_top = 818.0
margin_right = 480.0
margin_bottom = 1031.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite6" type="Sprite" parent="Node2D/Button5"]
position = Vector2( 116.004, 109.385 )
scale = Vector2( 0.478231, 0.325409 )
texture = ExtResource( 5 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 179.783
margin_top = 48.4
margin_right = 317.756
margin_bottom = 91.6928
rect_scale = Vector2( 2.60593, 3.30183 )
text = "ELIJA SU PERSONAJE
"
v_scroll_speed = 90.0
minimap_width = 92
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 199.0
margin_top = 1230.0
margin_right = 542.0
margin_bottom = 1255.0
text = "CREADO POR DAVID GERMAN BRAVO AMBROCIO"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Node2D/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Node2D/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Node2D/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Node2D/Button5" to="." method="_on_Button5_pressed"]
